# westernfriend.org

./: .all-contributorsrc  .codacy.yml  .codeclimate.yml  .coveragerc  .deepsource.toml  .env.example  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .prettierrc  CONTENT_MIGRATION.md  CONTRIBUTING.md  Dockerfile  ETHICS  Makefile  Pipfile  Procfile  README.md  app.json  deploy.md  develop.py  docker-compose.yaml  package-lock.json  package.json  pgadmin_dev_servers.json  post_deploy.sh  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  sonar-project.properties
app/: Dockerfile  docker-compose.yaml  env.sh  pgadmin_dev_servers.json  pyproject.toml  requirements.txt
app/accounts/: models.py
app/addresses/: models.py
app/blocks/: blocks.py
app/cart/: cart.py  urls.py  views.py
app/community/: models.py  wagtail_hooks.py
app/community/migrations/: 0001_initial.py  0001_squashed_0012_alter_communitypage_body.py  0002_alter_communitypage_body.py  0003_alter_communitypage_body.py  0004_alter_communitypage_body.py  0005_alter_communitypage_body.py  0006_alter_communitypage_body.py  0007_alter_communitypage_body.py  0008_alter_communitypage_body.py  0009_alter_communitypage_body.py  0010_alter_communitypage_body.py  0011_alter_communitypage_body.py
app/contact/: models.py  wagtail_hooks.py
app/contact/migrations/: 0001_initial.py  0001_squashed_0007_person_person_civicrm_9c9d2e_idx.py  0002_alter_meeting_civicrm_id_and_more.py  0003_alter_meeting_drupal_author_id_and_more.py  0004_meeting_drupal_duplicate_author_ids_and_more.py  0005_meeting_meeting_drupal__cf6e0d_idx_and_more.py  0006_meeting_meeting_civicrm_c09b04_idx_and_more.py  0007_person_person_civicrm_9c9d2e_idx.py
app/content_migration/: tests.py
app/core/: storage_backends.py  urls.py
app/core/settings/: base.py  dev.py
app/core/templates/: base.html  footer.html  navbar.html
app/documents/: models.py
app/documents/migrations/: 0001_initial.py  0001_squashed_0012_alter_meetingdocument_document_type_and_more.py  0002_rename_boarddocument_publicboarddocument.py  0004_alter_publicboarddocument_category_and_more.py  0006_alter_publicboarddocument_body.py  0008_alter_meetingdocument_options_and_more.py  0009_alter_meetingdocument_options.py
app/donations/: models.py  wagtail_hooks.py
app/donations/migrations/: 0001_initial.py  0002_alter_donatepage_suggested_donation_amounts.py
app/events/: models.py  wagtail_hooks.py
app/events/migrations/: 0001_initial.py  0001_squashed_0018_eventsponsor.py  0002_alter_event_body.py  0003_alter_event_body.py  0004_alter_event_body.py  0005_alter_event_body.py  0006_alter_event_body.py  0007_alter_event_body.py  0008_alter_event_body.py  0010_event_is_featured.py  0011_alter_event_body.py  0013_alter_event_body.py  0014_alter_event_body.py  0015_event_sponsor.py  0016_event_category.py  0017_remove_event_sponsor.py  0018_eventsponsor.py
app/facets/: models.py  wagtail_hooks.py
app/forms/: apps.py  models.py
app/forms/migrations/: 0001_initial.py  0001_squashed_0002_alter_formfield_choices_and_more.py  0002_alter_formfield_choices_and_more.py
app/home/: models.py
app/home/migrations/: 0001_initial.py  0002_initial.py  0003_delete_homepagefeaturedarticle.py  0004_delete_homepagefeaturedevent.py
app/magazine/: models.py  panels.py  wagtail_hooks.py
app/magazine/migrations/: 0001_initial.py  0002_alter_magazinearticle_body.py  0003_alter_magazinearticle_body.py  0004_alter_magazinearticle_body.py  0005_alter_magazinearticle_body.py  0006_alter_magazinearticle_body.py  0007_alter_magazinearticle_body.py  0008_alter_magazinearticle_body.py  0009_alter_magazinearticle_body.py  0010_alter_magazinearticle_body.py  0012_alter_magazinearticle_body.py  0014_alter_magazinearticle_body.py  0015_alter_magazinearticle_body.py  0016_alter_magazinearticle_body.py  0017_alter_magazinearticle_body.py  0018_alter_magazinearticle_body.py  0019_archiveissue_magazine_ar_interne_78a924_idx.py  0020_archivearticle_magazine_ar_drupal__fd3a5b_idx.py  0021_alter_archivearticleauthor_article.py  0022_alter_archivearticleauthor_author.py  0023_magazineissue_drupal_node_id.py  0024_magazineissue_magazine_ma_drupal__50c0bf_idx.py
app/memorials/: models.py
app/memorials/migrations/: 0001_initial.py  0001_squashed_0002_alter_memorial_options.py  0002_alter_memorial_options.py
app/navigation/: blocks.py  models.py
app/navigation/migrations/: 0001_initial.py  0001_squashed_0006_alter_navigationmenusetting_menu_items.py  0002_auto_20220426_0835.py  0003_alter_navigationmenusetting_items.py  0004_alter_navigationmenusetting_items.py  0005_rename_items_navigationmenusetting_menu_items.py  0006_alter_navigationmenusetting_menu_items.py
app/news/: models.py  wagtail_hooks.py
app/news/migrations/: 0001_initial.py  0002_alter_newsitem_body.py  0003_alter_newsitem_body.py  0004_alter_newsitem_body.py  0005_alter_newsitem_body.py  0006_alter_newsitem_body.py  0007_alter_newsitem_body.py  0008_alter_newsitem_body.py  0009_alter_newsitem_body.py  0011_alter_newsitem_body.py  0014_alter_newsitem_body.py  0015_alter_newsitem_body.py  0016_newsitem_body_migrated.py  0017_newsitem_drupal_node_id.py  0018_alter_newsitem_news_topic_alter_newsitem_news_type_and_more.py  0019_newsitemtag_newsitem_tags.py
app/orders/: models.py  views.py
app/orders/migrations/: 0001_initial.py
app/payment/: urls.py
app/store/: models.py  wagtail_hooks.py
app/store/migrations/: 0001_initial.py
app/subscription/: forms.py  models.py  wagtail_hooks.py
app/subscription/migrations/: 0001_initial.py  0001_squashed_0003_rename_format_subscription_magazine_format.py  0002_auto_20220706_1744.py
app/tags/: wagtail_hooks.py
app/wf_pages/: models.py
app/wf_pages/migrations/: 0001_initial.py  0001_squashed_0016_wfpagetag_wfpage_tags.py  0002_alter_wfpage_body.py  0003_alter_wfpage_body.py  0004_alter_wfpage_body.py  0005_alter_wfpage_body.py  0006_alter_wfpage_body.py  0007_alter_wfpage_body.py  0008_alter_wfpage_body.py  0009_alter_wfpage_body.py  0010_alter_wfpage_body.py  (+10 more)
(+1111 files in other folders)
