[project]
name = "Western-Friend-website"
version = "0.1.0"
description = "A website for Western Friend (westernfriend.org), a Quaker publication that provides resources and support for Quaker communities and individuals seeking to live out their faith in the world."
readme = "README.md"
requires-python = ">=3.10"
license = {text="agpl-3.0-or-later"}
authors = [
    { name = "Brylie Christopher Oxley", email = "brylie@amble.fi" },
    { name = "Mary Klein", email = "editor@westernfriend.org" },
    { name = "Western Friend" },
    { name = "Western Friend Board" },
]
maintainers = [
    { name = "Brylie Christopher Oxley", email = "brylie@amble.fi" }
]
keywords = [
    "django",
    "wagtail",
    "website",
    "western-friend",
    "quaker",
    "quakerism",
    "quaker-faith",
    "quaker-history",
    "quaker-peace",
    "quaker-testimonies",
    "quaker-worship",
    "quaker-organizations",
    "quaker-meetings",
    "quaker-education",
    "quaker-activism",
    "quaker-ecumenism",
    "interfaith",
    "quaker-faith-and-practice",
    "quaker-friends",
    "quaker-ecology",
    "quaker-arts",
    "quaker-letters",
    "quaker-epistles",
    "quaker-archives",
    "quaker-philosophy",
    "quaker-philanthropy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Wagtail",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Religion",
]
dependencies = [
    "arrow",
    "braintree",
    "django-crispy-forms",
    "django-registration",
    "django-flatpickr",
    "dj-database-url",
    "gunicorn",
    "pandas",
    "psycopg2-binary",
    "python-dotenv",
    "tqdm",
    "django-timezone-field",
    "tzdata",
    "wagtail-color-panel",
    "django-storages",
    "boto3",
    "wagtailmedia",
    "wagtail",
    "django-extensions",
    "django",
    # TODO: move this to dev dependencies
    # and load it conditionally in development environments only
    "django-debug-toolbar",
]

[project.urls]
Homepage = "https://westernfriend.org"
Repository = "https://github.com/WesternFriend/WF-website"


[project.optional-dependencies]
dev = [
    "django-browser-reload",
    "pre-commit",
    "coverage",
    "pre-commit",
    "black",
    "pandas-stubs",
    "django-stubs[compatible-mypy]",
    "types-requests",
    "types-beautifulsoup4",
    "coverage",
    "validate-pyproject",
    "pip-tools",
]

[tool.black]
target-version = ['py311']

[tool.django-stubs]
django_settings_module = "core.settings.base"

[tool.isort]
profile = "black"

# TODO: add this back in when we figure out how to make it work
# [tool.mypy]
# plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "wagtail.*"
ignore_missing_imports = true

[tool.ruff]
# Same as Black.
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "**/migrations"
]

# Assume Python 3.11
target-version = "py311"
